# mcp-server-demo-deployment

./: README.md  pyproject.toml
src/mcpserver/: deployment.py
