[project]
name = "mcp-server-demo-deployment"
version = "0.1.0"
description = "A demo MCP server for deployment"
readme = "README.md"
authors = [
    { name = "Douglas Quintiliano dos Santos", email = "douglas.q.santos@gmail.com" },
]
license = { file = "LICENSE" }
keywords = ["mcp", "server", "deployment"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = ["mcp[cli]>=1.26.0"]

[project.scripts]
mcp-server = "mcpserver.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
